# Smart_Store

./: CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/workflows/: main.yml
CMakeModels/: FindJson.cmake
review/: Review.cpp
src/author/: author.hpp
src/err_log/: Logger.hpp
src/interface/: BaseItem.h
src/t_manager/: ItemManager.h  ItemManager.tpp
src/t_wrapper/: ItemWrapper.h  ItemWrapper.tpp
src/utils/: AtomicFileWriter .hpp  Json_traits.hpp
src/versionForMigration/: MigrationRegistry.cpp  MigrationRegistry.h
tests/: test_ItemManager.cpp
